--- a/TravelRecordApp/TravelRecordApp/TravelRecordApp/MainPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/TravelRecordApp/MainPage.xaml
@@ -3,22 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecordApp.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Hello Bex, Isn't it cool" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
+    <StackLayout Margin="15"
+                 VerticalOptions="Center">
+        <Entry Placeholder="Email"/>
+        <Entry Placeholder="Password"/>
+        <Button x:Name="LoginButton"
+                Text="Login"
+                BackgroundColor="#3F84E5"
+                TextColor="White"
+                Clicked="LoginButton_Clicked"/>
+
     </StackLayout>
 
 </ContentPage>
