--- a/TravelRecordApp/TravelRecordApp/TravelRecordApp/HomePage.xaml
+++ b/TravelRecordApp/TravelRecordApp/TravelRecordApp/HomePage.xaml
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TravelRecordApp.HomePage">
+             x:Class="TravelRecordApp.HomePage"
+            xmlns:local="clr-namespace:TravelRecordApp">
+    
+    <local:HistoryPage Title="History"/>
+    <local:MapPage Title="Map"/>
+    <local:ProfilePage  Title="Profile"/>
 
-    <StackLayout>
-        <Label Text="Hello, something" />
-    </StackLayout>
-</ContentPage>
+</TabbedPage>
