--- a/TravelRecordApp/TravelRecordApp/TravelRecordApp/HomePage.xaml
+++ b/TravelRecordApp/TravelRecordApp/TravelRecordApp/HomePage.xaml
@@ -3,7 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecordApp.HomePage"
             xmlns:local="clr-namespace:TravelRecordApp">
-    
+    <TabbedPage.ToolbarItems>
+        <ToolbarItem Text="Add"
+                     Clicked="ToolbarItem_Clicked"/>
+    </TabbedPage.ToolbarItems>
     <local:HistoryPage Title="History"/>
     <local:MapPage Title="Map"/>
     <local:ProfilePage  Title="Profile"/>
