--- a/TravelRecordApp/TravelRecordApp/TravelRecordApp/NewTravelPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/TravelRecordApp/NewTravelPage.xaml
@@ -2,11 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecordApp.NewTravelPage">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Save"
+                     Clicked="ToolbarItem_Clicked" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to New Travel Page!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Entry x:Name="experienceEntry"
+                Placeholder="Write your experiance" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
