--- a/TravelRecordApp/TravelRecordApp/TravelRecordApp/HistoryPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/TravelRecordApp/HistoryPage.xaml
@@ -2,9 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecordApp.HistoryPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to History Page!" />
-        </StackLayout>
-    </ContentPage.Content>
+    <ListView x:Name="postListView"
+              ItemSelected="postListView_ItemSelected">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextCell Text="{Binding Experience}"/>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
